Remove body and navbar padding to fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,12 @@
-body {
-	padding-top: 70px;
+.navbar-logo, .navbar-nav > li > a.navbar-logo {
+	padding: 0;
 }
 
-.navbar-logo, .navbar-nav>li>a.navbar-logo {
-	padding-top: 0;
-	padding-bottom: 0;
-}
-.navbar-nav>li>a.navbar-social {
+.navbar-nav > li > a.navbar-social {
 	padding-top: 10px;
+	padding-right: 0px;
 	padding-bottom: 10px;
+	padding-left: 0px;
 }
 
 .navbar-logo img {
